@@ -1,5 +1,6 @@
 applauncherd (0.30.1) unstable; urgency=low
 
+  * Changes: New functional tests added to check testability library is loaded by booster-m and booster-d
   * Changes: Deprecate MDeclarativeCache::applicationDirPath() and MDeclarativeCache::applicationFilePath().
   * Changes: Modify test applications to use _exit().
 
